--- a/tp4.ipynb
+++ b/tp4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN868X7PO28aFQ8DKfAxkW1",
+      "authorship_tag": "ABX9TyNaeM91VHQFP1NmlGxzDg9q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,65 +28,81 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "g7SofbGiSYRW"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "\n",
-        "A = np.array([[1, -1], [1, 2]])\n",
-        "b = np.array([[4],[6]])\n",
-        "c = np.array([[3, 2]])\n",
+        "def calculer_minimum(offre, demande, i, j):\n",
+        "    return min(offre[i], demande[j])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
         "\n",
-        "def generate_tabinitial(A, b, c):\n",
-        "    m, n = A.shape\n",
-        "    T = np.zeros((m + 1, n + m + 1))\n",
-        "    T[:m, :n] = A\n",
-        "    T[:m, n:n+m] = np.eye(m)\n",
-        "    T[:m, n+m] = b.flatten()\n",
-        "    T[m, :n] = c\n",
-        "    return T\n",
+        "def coin_nord_ouest(offre, demande):\n",
+        "    m = len(offre)\n",
+        "    n = len(demande)\n",
+        "    allocation = np.zeros((m, n))\n",
         "\n",
-        "print(generate_tabinitial(A, b, c))\n",
+        "    i = 0\n",
+        "    j = 0\n",
         "\n",
+        "    while i < m and j < n:\n",
+        "        alloc = min(offre[i], demande[j])\n",
+        "        allocation[i, j] = alloc\n",
+        "        offre[i] = offre[i] - alloc\n",
+        "        demande[j] = demande[j] - alloc\n",
         "\n",
-        "\"\"\"------------------------------------------------------------------------------------------------------------------------------------------------------------------------- \"\"\"\n",
-        "def positive(v):\n",
-        "    min_val = np.min(v)\n",
-        "    min_idx = np.argmin(v)\n",
-        "    all_pos = np.all(v >= 0)\n",
+        "        if offre[i] == 0:\n",
+        "            i = i + 1\n",
+        "        elif demande[j] == 0:\n",
+        "            j = j + 1\n",
         "\n",
-        "    if all_pos:\n",
-        "        return True\n",
-        "    else:\n",
-        "        print(f\"min = {min_val} à l'indice {min_idx}\")\n",
-        "        return False\n",
-        "\n",
-        "#exemple\n",
-        "arr = np.array([[0, 1, -3, 2], [0,4,2,1]])\n",
+        "    return allocation\n",
         "\n",
         "\n",
-        "result = positive(arr)\n",
-        "print(f\"Result: {result}\")\n",
+        "def calculer_cout_total(allocation, couts):\n",
+        "    return np.sum(allocation * couts)\n",
         "\n",
-        "\"\"\"------------------------------------------------------------------------------------------------------------------------------------------------------------------------- \"\"\"\n",
-        "def rapportmin(b, a):\n",
-        "  for i in range(len(a+b)):\n",
-        "    if a[i] > 0:\n",
-        "      x[i]=a[i]/b[i]\n",
         "\n",
-        "  min_index = np.argmin(x)\n",
+        "def afficher_solution(allocation, couts):\n",
+        "    m, n = allocation.shape\n",
         "\n",
-        "  return min_index\n",
-        "#exemple\n",
-        "a=np.array([1,2,3])\n",
-        "b=np.array([4,2,7])\n",
-        "x=np.array()\n"
+        "    print(\"\\nSolution:\")\n",
+        "    for i in range(m):\n",
+        "        for j in range(n):\n",
+        "            if allocation[i, j] > 0:\n",
+        "                print(f\"x[{i+1},{j+1}] = {int(allocation[i, j])}\")\n",
+        "\n",
+        "    cout_total = calculer_cout_total(allocation, couts)\n",
+        "    print(f\"\\nCoût total: {int(cout_total)}\")\n",
+        "\n",
+        "\n",
+        "offre = [12, 11, 14, 8]\n",
+        "demande = [10, 11, 15, 5, 4]\n",
+        "\n",
+        "couts = np.array([\n",
+        "    [7, 12, 1, 5, 9],\n",
+        "    [15, 3, 12, 6, 14],\n",
+        "    [8, 16, 10, 12, 7],\n",
+        "    [18, 8, 17, 11, 16]\n",
+        "])\n",
+        "\n",
+        "allocation = coin_nord_ouest(offre.copy(), demande.copy())\n",
+        "afficher_solution(allocation, couts)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 263
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "NEwKryv9Ww-c",
-        "outputId": "58e3998f-cb05-4985-b264-dc9701073228"
+        "id": "4itNIyAUVNb7",
+        "outputId": "c1b3ee1f-b2ae-4c65-9031-2cfd1f89cb50"
       },
       "execution_count": null,
       "outputs": [
@@ -94,22 +110,159 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 1. -1.  1.  0.  4.]\n",
-            " [ 1.  2.  0.  1.  6.]\n",
-            " [ 3.  2.  0.  0.  0.]]\n",
-            "min = -3 à l'indice 2\n",
-            "Result: False\n"
+            "\n",
+            "Solution:\n",
+            "x[1,1] = 10\n",
+            "x[1,2] = 2\n",
+            "x[2,2] = 9\n",
+            "x[2,3] = 2\n",
+            "x[3,3] = 13\n",
+            "x[3,4] = 1\n",
+            "x[4,4] = 4\n",
+            "x[4,5] = 4\n",
+            "\n",
+            "Coût total: 395\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def balas_hammer(offre, demande, couts):\n",
+        "    m = len(offre)\n",
+        "    n = len(demande)\n",
+        "    allocation = np.zeros((m, n))\n",
+        "\n",
+        "    lignes_satisfaites = [False] * m\n",
+        "    colonnes_satisfaites = [False] * n\n",
+        "\n",
+        "    while sum(offre) > 0 and sum(demande) > 0:\n",
+        "        diff_lignes = []\n",
+        "        diff_colonnes = []\n",
+        "\n",
+        "        for i in range(m):\n",
+        "            if not lignes_satisfaites[i]:\n",
+        "                couts_ligne = []\n",
+        "                for j in range(n):\n",
+        "                    if not colonnes_satisfaites[j]:\n",
+        "                        couts_ligne.append(couts[i, j])\n",
+        "\n",
+        "                if len(couts_ligne) >= 2:\n",
+        "                    couts_ligne.sort()\n",
+        "                    diff = couts_ligne[1] - couts_ligne[0]\n",
+        "                else:\n",
+        "                    diff = couts_ligne[0] if len(couts_ligne) == 1 else 0\n",
+        "\n",
+        "                diff_lignes.append((diff, i, 'ligne'))\n",
+        "            else:\n",
+        "                diff_lignes.append((-1, i, 'ligne'))\n",
+        "\n",
+        "        for j in range(n):\n",
+        "            if not colonnes_satisfaites[j]:\n",
+        "                couts_colonne = []\n",
+        "                for i in range(m):\n",
+        "                    if not lignes_satisfaites[i]:\n",
+        "                        couts_colonne.append(couts[i, j])\n",
+        "\n",
+        "                if len(couts_colonne) >= 2:\n",
+        "                    couts_colonne.sort()\n",
+        "                    diff = couts_colonne[1] - couts_colonne[0]\n",
+        "                else:\n",
+        "                    diff = couts_colonne[0] if len(couts_colonne) == 1 else 0\n",
+        "\n",
+        "                diff_colonnes.append((diff, j, 'colonne'))\n",
+        "            else:\n",
+        "                diff_colonnes.append((-1, j, 'colonne'))\n",
+        "\n",
+        "        max_diff_ligne = max(diff_lignes, key=lambda x: x[0])\n",
+        "        max_diff_colonne = max(diff_colonnes, key=lambda x: x[0])\n",
+        "\n",
+        "        if max_diff_ligne[0] >= max_diff_colonne[0]:\n",
+        "            i = max_diff_ligne[1]\n",
+        "            min_cout = float('inf')\n",
+        "            j_min = -1\n",
+        "            for j in range(n):\n",
+        "                if not colonnes_satisfaites[j] and couts[i, j] < min_cout:\n",
+        "                    min_cout = couts[i, j]\n",
+        "                    j_min = j\n",
+        "            j = j_min\n",
+        "        else:\n",
+        "            j = max_diff_colonne[1]\n",
+        "            min_cout = float('inf')\n",
+        "            i_min = -1\n",
+        "            for i in range(m):\n",
+        "                if not lignes_satisfaites[i] and couts[i, j] < min_cout:\n",
+        "                    min_cout = couts[i, j]\n",
+        "                    i_min = i\n",
+        "            i = i_min\n",
+        "\n",
+        "        alloc = min(offre[i], demande[j])\n",
+        "        allocation[i, j] = alloc\n",
+        "        offre[i] = offre[i] - alloc\n",
+        "        demande[j] = demande[j] - alloc\n",
+        "\n",
+        "        if offre[i] == 0:\n",
+        "            lignes_satisfaites[i] = True\n",
+        "        if demande[j] == 0:\n",
+        "            colonnes_satisfaites[j] = True\n",
+        "\n",
+        "    return allocation\n",
+        "\n",
+        "\n",
+        "def calculer_cout_total(allocation, couts):\n",
+        "    return np.sum(allocation * couts)\n",
+        "\n",
+        "\n",
+        "def afficher_solution(allocation, couts):\n",
+        "    m, n = allocation.shape\n",
+        "\n",
+        "    print(\"\\nSolution:\")\n",
+        "    for i in range(m):\n",
+        "        for j in range(n):\n",
+        "            if allocation[i, j] > 0:\n",
+        "                print(f\"x[{i+1},{j+1}] = {int(allocation[i, j])}\")\n",
+        "\n",
+        "    cout_total = calculer_cout_total(allocation, couts)\n",
+        "    print(f\"\\nCoût total: {int(cout_total)}\")\n",
+        "\n",
+        "\n",
+        "offre = [20, 17, 13]\n",
+        "demande = [12, 10, 15, 13]\n",
+        "\n",
+        "couts = np.array([\n",
+        "    [3, 6, 4, 8],\n",
+        "    [3, 4, 7, 9],\n",
+        "    [9, 4, 5, 6]\n",
+        "])\n",
+        "\n",
+        "allocation = balas_hammer(offre.copy(), demande.copy(), couts)\n",
+        "afficher_solution(allocation, couts)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "Pe-1nj1PYjb0",
+        "outputId": "2ab953b5-cfab-4148-eeea-9f1d287b2f4f"
+      },
+      "execution_count": null,
+      "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "array() missing required argument 'object' (pos 0)",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-172572329.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: array() missing required argument 'object' (pos 0)"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Solution:\n",
+            "x[1,1] = 5\n",
+            "x[1,3] = 15\n",
+            "x[2,1] = 7\n",
+            "x[2,2] = 10\n",
+            "x[3,4] = 13\n",
+            "\n",
+            "Coût total: 214\n"
           ]
         }
       ]
